--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Puneet20689.github.io/wheeldeal",
   "name": "car-marketplace",
   "private": true,
   "version": "0.0.0",
@@ -6,8 +7,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview",
+
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
